package com.exodidio.tune

fun sayHello(to: String): String =
    "Hello, $to!"